m30s-common: dts: add fstab entry for system and vendor with disabled avb
Signed-off-by: santhosh6194 <santhosh6194@gmail.com>

--- a/arch/arm64/boot/dts/exynos/exynos9610.dts
+++ b/arch/arm64/boot/dts/exynos/exynos9610.dts
@@ -2573,11 +2573,26 @@
 		android {
 			compatible = "android,firmware";
 
-			vbmeta {
-			};
-
 			fstab {
-				
+				compatible = "android,fstab";
+
+				system {
+					compatible = "android,system";
+					dev = "/dev/block/platform/13520000.ufs/by-name/system";
+					type = "ext4";
+					mnt_flags = "ro";
+					fsmgr_flags = "wait";
+					status = "disabled";
+				};
+
+				vendor {
+					compatible = "android,vendor";
+					dev = "/dev/block/platform/13520000.ufs/by-name/vendor";
+					type = "ext4";
+					mnt_flags = "ro";
+					fsmgr_flags = "wait,verify";
+					status = "okay";
+				};
 			};
 		};
 	};
